@@ -1,3 +1,7 @@
+2011-07-17 Borut Razem <borut.razem AT gmail.com>
+
+	* bin/dcf.sh: added debug_exec() function
+
 2011-07-15 Borut Razem <borut.razem AT gmail.com>
 
 	* packages/build.gputils/Makefile: build gputils from svn HEAD
